# ex_ratatui

./: .formatter.exs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  checksum-Elixir.ExRatatui.Native.exs  mix.exs  usage-rules.md
.github/workflows/: burrito_demo.yml  ci.yml  release.yml
examples/: README.md  big_text_demo.exs  chat_interface.exs  chat_log.exs  code_block_demo.exs  data_table.exs  focus_multi_panel.exs  headless_image.exs  image_demo.exs  layout_flex_demo.exs  line_gauge_demo.exs  reducer_counter_app.exs  scrollbar_demo.exs  slides.exs  system_monitor.exs  tabs_demo.exs  task_manager.exs  text_input_cjk.exs  theme_picker.exs  widget_showcase.exs
examples/apps/: chat.exs  chat_log.exs  system_monitor.exs  task_manager.exs
examples/basics/: counter.exs  counter_app.exs  echo_chat.exs  hello_world.exs  reducer_counter_app.exs
examples/burrito_demo/: .gitignore  .mise.toml  README.md  mix.exs
examples/cell_session/: cell_dump.exs  headless_image.exs
examples/images/: image_demo.exs
examples/layout/: flex.exs  focus.exs  theme.exs
examples/observability/: state_machine.exs  telemetry.exs
examples/widgets/: barchart.exs  big_text.exs  calendar.exs  canvas.exs  chart.exs  checkbox.exs  clear.exs  code_block.exs  custom_widget.exs  gauge.exs  line_gauge.exs  list.exs  markdown.exs  popup.exs  rich_text.exs  scrollbar.exs  slash_commands.exs  sparkline.exs  table.exs  tabs.exs  text_input_cjk.exs  textarea.exs  throbber.exs  viewport3d_articulated.exs  viewport3d_controls.exs  viewport3d_cube.exs  viewport3d_custom_mesh.exs  viewport3d_scene.exs  widget_list.exs  widget_showcase.exs
guides/: building_uis.md  callback_runtime.md  cell_session.md  custom_transports.md  debugging.md  distributed_transport.md  getting_started.md  images.md  packaging_with_burrito.md  performance.md  reducer_runtime.md  ssh_transport.md  state_machines.md  telemetry.md  testing.md  transports.md
guides/cheatsheets/: widgets.cheatmd
guides/core/: 3d.md  building_uis.md  images.md  (+2 more)
lib/: ex_ratatui.ex
native/ex_ratatui/: Cargo.toml
native/ex_ratatui/.cargo/: config.toml
native/ex_ratatui/src/: cell_session.rs  decode.rs  events.rs  highlight.rs  image.rs  layout.rs  lib.rs  rendering.rs  session.rs  session_input.rs  style.rs  terminal.rs  test_utils.rs  text.rs  text_input.rs  textarea.rs
native/ex_ratatui/src/widgets/: bar_chart.rs  big_text.rs  block.rs  calendar.rs  canvas.rs  chart.rs  checkbox.rs  code_block.rs  highlighter.rs  line_gauge.rs  list.rs  markdown.rs  mod.rs  paragraph.rs  popup.rs  scrollbar.rs  sparkline.rs  table.rs  tabs.rs  throbber.rs  viewport3d.rs  widget_list.rs
native/ex_ratatui/syntaxes/: README.md
test/: ex_ratatui_test.exs  examples_test.exs  test_helper.exs
(+206 files in other folders)
