[package]
name = "ex_ratatui"
version = "0.10.0"
authors = ["mcass19"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.38.0", default-features = false, features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
time = "0.3"
throbber-widgets-tui = "0.11"
ratatui-textarea = "0.9"
tui-markdown = "0.3"
unicode-width = "0.2"
vte = "0.15"
ratatui-image = { version = "11.0.2", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
tui-big-text = "0.8.4"
syntect = "5"

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

# Strip Rust's panic-unwinding machinery so the NIF has no runtime
# dependency on libgcc_s.so.1. `-static-libgcc` alone leaves the
# unwinder linking dynamically, which breaks the load under burrito's
# musl wrapper. Trade-off: a panic inside the NIF aborts the BEAM
# instead of being caught and reported via rustler.
[profile.release]
panic = "abort"
